manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctm-app-deployment1
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:  
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      containers:
      - name: celso
        image: c3ls0/ctm:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
---
