manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    kubernetes.io/ingress.class: nginx        
spec:
  rules:
  - host: a4504cc5dd1d84897a0bb91e4864183a-ecc64292e4c5e7d2.elb.eu-west-1.amazonaws.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
